# simple_autonomous_car

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
docs/: index.md
docs/api/: modules.md  overview.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: building-alert-systems.md  component_visualization.md  costmap.md  footprint_guide.md  frame-conversions.md  grid_map_navigation.md  track-bounds-alert.md  visualization.md
examples/: costmap_example.py  grid_map_example.py  visualization_example.py
notebooks/: README.md
notebooks/building/: README.md  building_controller.ipynb  building_custom_planners.ipynb  building_custom_sensors.ipynb  building_simulation.ipynb
notebooks/examples/: README.md
notebooks/learning/: README.md
notebooks/learning/algorithms/: advanced_planning_algorithms.ipynb  control_algorithms.ipynb  dynamic_obstacles.ipynb  sensor_algorithms.ipynb
notebooks/learning/control/: learning_build_controller.ipynb
notebooks/learning/costmaps/: footprint_integration.ipynb  learning_build_costmap.ipynb
notebooks/learning/oop_fundamentals/: understanding_classes_and_oop.ipynb
notebooks/learning/planning/: learning_build_planner.ipynb
notebooks/learning/sensors/: learning_build_sensor.ipynb
notebooks/tutorials/: README.md  costmap_tutorial.ipynb  performance_optimization.ipynb  planner_tutorial.ipynb  sensor_fusion_tutorial.ipynb  track_bounds_alert.ipynb
src/simple_autonomous_car/: __init__.py  constants.py
src/simple_autonomous_car/alerts/: __init__.py  track_bounds_alert.py
src/simple_autonomous_car/car/: __init__.py  car.py
src/simple_autonomous_car/control/: __init__.py  base_controller.py  controller_viz.py  pid_controller.py  pure_pursuit_controller.py
src/simple_autonomous_car/costmap/: __init__.py  inflation.py  (+2 more)
src/simulations/: README.md  __init__.py  enhanced_visualization.py  simulation.py
tests/: __init__.py  test_car.py  test_detection.py  test_filters.py  test_grid_map.py  test_maps.py  test_track.py
(+36 files in other folders)
